doc/k8s/prometheus/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: grafana
   namespace: kube-system
   annotations:
     kubernetes.io/ingress.class: nginx
spec:
   rules:
   - host: grafana.k8s.com
     http:
       paths:
       - pathType: Prefix
         path: /
         backend:
          service:
            name: grafana
            port:
              number: 3000
