doc/k8s/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: prometheus
   namespace: kube-system
   annotations:
     kubernetes.io/ingress.class: nginx
spec:
   rules:
   - host: prometheus.k8s.com
     http:
       paths:
       - pathType: Prefix
         path: /
         backend:
          service:
            name: prometheus
            port:
              number: 9090
